@@ -1,3 +1,5 @@
+- library:
+  o enable to report packages signature checking in global progress bar dialog
 - gurpmi2:
   o improved layout:
     * only the package list needs a scrolling bar
